--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "submodules/protocol-protobuffs"]
 	path = submodules/protocol-protobuffs
 	url = https://github.com/catalyst-network/protocol-protobuffs.git
+[submodule "submodules/Nethereum"]
+	path = submodules/Nethereum
+	url = https://github.com/atlascity/Nethereum.git
