--- a/src/Catalyst.Cli/Config/shell.components.json
+++ b/src/Catalyst.Cli/Config/shell.components.json
@@ -42,10 +42,10 @@
             ]
         },
         {
-            "type": "Catalyst.Common.IO.Messaging.CorrelationManager, Catalyst.Common",
+            "type": "Catalyst.Common.IO.Messaging.MessageCorrelationManager, Catalyst.Common",
             "services": [
                 {
-                    "type": "Catalyst.Common.Interfaces.IO.Messaging.ICorrelationManager, Catalyst.Common"
+                    "type": "Catalyst.Common.Interfaces.IO.Messaging.IMessageCorrelationManager, Catalyst.Common"
                 }
             ],
             "instanceScope": "singleinstance"
