--- a/src/Catalyst.Common/Catalyst.Common.csproj
+++ b/src/Catalyst.Common/Catalyst.Common.csproj
@@ -63,6 +63,7 @@
         </None>
     </ItemGroup>
     <ItemGroup>
+        <Folder Include="Interfaces\IO\Messaging\Handlers" />
         <Folder Include="Interfaces\Util" />
     </ItemGroup>
     <ItemGroup>
