Add Handler worker event thread pools

--- a/src/Catalyst.Cli/Config/shell.components.json
+++ b/src/Catalyst.Cli/Config/shell.components.json
@@ -10,6 +10,17 @@
             ]
         },
         {
+            "type": "Catalyst.Common.IO.HandlerWorkerEventLoopGroupFactory, Catalyst.Common",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.IO.IHandlerWorkerEventLoopGroupFactory, Catalyst.Common"
+                }
+            ],
+            "parameters": {
+                "tcpClientThreads": 2
+            }
+        },
+        {
             "type": "Catalyst.Node.Rpc.Client.NodeRpcClientFactory, Catalyst.Node.Rpc.Client",
             "services": [
                 {
