--- a/src/Catalyst.Node.Core/Config/components.json
+++ b/src/Catalyst.Node.Core/Config/components.json
@@ -19,10 +19,10 @@
             "instanceScope": "singleinstance"
         },
         {
-            "type": "Catalyst.Common.IO.Messaging.MessageFactory, Catalyst.Common",
+            "type": "Catalyst.Common.IO.Messaging.ProtocolMessageFactory, Catalyst.Common",
             "services": [
                 {
-                    "type": "Catalyst.Common.Interfaces.IO.Messaging.IMessageFactory, Catalyst.Common"
+                    "type": "Catalyst.Common.Interfaces.IO.Messaging.IProtocolMessageFactory, Catalyst.Common"
                 }
             ]
         },
