--- a/src/Catalyst.Common.IntegrationTests/Catalyst.Common.IntegrationTests.csproj
+++ b/src/Catalyst.Common.IntegrationTests/Catalyst.Common.IntegrationTests.csproj
@@ -18,4 +18,8 @@
       <PackageReference Include="Nethereum.KeyStore" Version="3.3.0" />
       <PackageReference Include="Nethereum.RLP" Version="3.3.0" />
     </ItemGroup>
+    <ItemGroup>
+      <PackageReference Update="FluentAssertions" Version="5.7.0" />
+      <PackageReference Update="NSubstitute" Version="4.2.0" />
+    </ItemGroup>
 </Project>
