--- a/src/Catalyst.Common.UnitTests/Catalyst.Common.UnitTests.csproj
+++ b/src/Catalyst.Common.UnitTests/Catalyst.Common.UnitTests.csproj
@@ -18,10 +18,18 @@
         <PackageReference Include="Nethereum.RLP" Version="3.3.0" />
         <PackageReference Include="Serilog.Sinks.File" Version="4.0.0" />
         <PackageReference Include="SharpRepository.Ioc.Autofac" Version="2.0.4.2" />
-        <PackageReference Include="Serilog.Settings.Configuration" Version="3.0.1" />
+        <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\Catalyst.Common\Catalyst.Common.csproj" />
         <ProjectReference Include="..\Catalyst.TestUtils\Catalyst.TestUtils.csproj" />
+    </ItemGroup>
+    <ItemGroup>
+      <PackageReference Update="coverlet.msbuild" Version="2.6.2">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Update="FluentAssertions" Version="5.7.0" />
+      <PackageReference Update="NSubstitute" Version="4.2.0" />
     </ItemGroup>
 </Project>
