--- a/src/Catalyst.Node.Rpc.Client.UnitTests/Catalyst.Node.Rpc.Client.UnitTests.csproj
+++ b/src/Catalyst.Node.Rpc.Client.UnitTests/Catalyst.Node.Rpc.Client.UnitTests.csproj
@@ -18,4 +18,12 @@
       <PackageReference Include="Nethereum.RLP" Version="3.3.0" />
     </ItemGroup>
     <Import Project="../Common.UnitTests.props" />
+    <ItemGroup>
+      <PackageReference Update="coverlet.msbuild" Version="2.6.2">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Update="FluentAssertions" Version="5.7.0" />
+      <PackageReference Update="NSubstitute" Version="4.2.0" />
+    </ItemGroup>
 </Project>
