cahnge version in a cleaner way :/

--- a/src/Catalyst.Cli.IntegrationTests/Catalyst.Cli.IntegrationTests.csproj
+++ b/src/Catalyst.Cli.IntegrationTests/Catalyst.Cli.IntegrationTests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>netcoreapp2.2</TargetFramework>
         <RootNamespace>Catalyst.Cli.IntegrationTests</RootNamespace>
@@ -15,9 +15,5 @@
     </ItemGroup>
     <ItemGroup>
       <PackageReference Include="Nethereum.RLP" Version="3.3.0" />
-    </ItemGroup>
-    <ItemGroup>
-      <PackageReference Update="FluentAssertions" Version="5.7.0" />
-      <PackageReference Update="NSubstitute" Version="4.2.0" />
     </ItemGroup>
 </Project>
