--- a/src/Catalyst.Common.IntegrationTests/Catalyst.Common.IntegrationTests.csproj
+++ b/src/Catalyst.Common.IntegrationTests/Catalyst.Common.IntegrationTests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>netcoreapp2.2</TargetFramework>
         <Authors>James Kirby (nshcore@protonmail.com)</Authors>
@@ -17,9 +17,5 @@
     <ItemGroup>
       <PackageReference Include="Nethereum.KeyStore" Version="3.3.0" />
       <PackageReference Include="Nethereum.RLP" Version="3.3.0" />
-    </ItemGroup>
-    <ItemGroup>
-      <PackageReference Update="FluentAssertions" Version="5.7.0" />
-      <PackageReference Update="NSubstitute" Version="4.2.0" />
     </ItemGroup>
 </Project>
