--- a/src/Catalyst.Node.Core.UnitTests/Catalyst.Node.Core.UnitTests.csproj
+++ b/src/Catalyst.Node.Core.UnitTests/Catalyst.Node.Core.UnitTests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>netcoreapp2.2</TargetFramework>
         <Authors>James Kirby (nshcore@protonmail.com)</Authors>
@@ -31,13 +31,5 @@
     <ItemGroup>
         <ProjectReference Include="..\Catalyst.Node.Core\Catalyst.Node.Core.csproj" />
         <ProjectReference Include="..\Catalyst.TestUtils\Catalyst.TestUtils.csproj" />
-    </ItemGroup>
-    <ItemGroup>
-      <PackageReference Update="coverlet.msbuild" Version="2.6.2">
-        <PrivateAssets>all</PrivateAssets>
-        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      </PackageReference>
-      <PackageReference Update="FluentAssertions" Version="5.7.0" />
-      <PackageReference Update="NSubstitute" Version="4.2.0" />
     </ItemGroup>
 </Project>
