--- a/src/Catalyst.Node.Rpc.Client.IntegrationTests/Catalyst.Node.Rpc.Client.IntegrationTests.csproj
+++ b/src/Catalyst.Node.Rpc.Client.IntegrationTests/Catalyst.Node.Rpc.Client.IntegrationTests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <Authors>James Kirby (nshcore@protonmail.com)</Authors>
@@ -13,12 +13,5 @@
     <ProjectReference Include="..\Catalyst.Common\Catalyst.Common.csproj" />
     <ProjectReference Include="..\Catalyst.Node.Rpc.Client\Catalyst.Node.Rpc.Client.csproj" />
     <ProjectReference Include="..\Catalyst.TestUtils\Catalyst.TestUtils.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Nethereum.RLP" Version="3.3.0" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Update="FluentAssertions" Version="5.7.0" />
-    <PackageReference Update="NSubstitute" Version="4.2.0" />
   </ItemGroup>
 </Project>
