Random stream disposal exception (#501)
* fix: random stream disposal exception

* Latest version of PeerTalk now ignores exceptions when trying to dispose
a stream in a background task.

* fix: another dependency on Ipfs.Engine

* more package updates and get rid of Asp.Net

* put back the old values of delays for cancellable tests to make them more reliable

* change version in a cleaner way :/

--- a/src/Catalyst.Node.Rpc.Client.IntegrationTests/Catalyst.Node.Rpc.Client.IntegrationTests.csproj
+++ b/src/Catalyst.Node.Rpc.Client.IntegrationTests/Catalyst.Node.Rpc.Client.IntegrationTests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <Authors>James Kirby (nshcore@protonmail.com)</Authors>
@@ -13,8 +13,5 @@
     <ProjectReference Include="..\Catalyst.Common\Catalyst.Common.csproj" />
     <ProjectReference Include="..\Catalyst.Node.Rpc.Client\Catalyst.Node.Rpc.Client.csproj" />
     <ProjectReference Include="..\Catalyst.TestUtils\Catalyst.TestUtils.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Nethereum.RLP" Version="3.3.0" />
   </ItemGroup>
 </Project>
