--- a/src/Catalyst.Node.Core.IntegrationTests/Catalyst.Node.Core.IntegrationTests.csproj
+++ b/src/Catalyst.Node.Core.IntegrationTests/Catalyst.Node.Core.IntegrationTests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>netcoreapp2.2</TargetFramework>
         <AssemblyName>Catalyst.Node.Core.IntegrationTests</AssemblyName>
@@ -24,8 +24,5 @@
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.App" />
-    </ItemGroup>
-    <ItemGroup>
-      <PackageReference Include="Nethereum.RLP" Version="3.3.0" />
     </ItemGroup>
 </Project>
