--- a/src/Catalyst.TestUtils/Catalyst.TestUtils.csproj
+++ b/src/Catalyst.TestUtils/Catalyst.TestUtils.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>netcoreapp2.2</TargetFramework>
         <OutputType>Library</OutputType>
@@ -14,8 +14,5 @@
     <ItemGroup>
         <ProjectReference Include="..\Catalyst.Common\Catalyst.Common.csproj" />
         <ProjectReference Include="..\Catalyst.Node.Core\Catalyst.Node.Core.csproj" />
-    </ItemGroup>
-    <ItemGroup>
-      <PackageReference Include="Nethereum.RLP" Version="3.3.0" />
     </ItemGroup>
 </Project>
