--- a/src/Catalyst.Cli/Config/shell.components.json
+++ b/src/Catalyst.Cli/Config/shell.components.json
@@ -26,6 +26,46 @@
             ]
         },
         {
+            "type": "Catalyst.Common.Modules.KeySigner.KeySigner, Catalyst.Common",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.Modules.KeySigner.IKeySigner, Catalyst.Common"
+                }
+            ]
+        },
+        {
+            "type": "Catalyst.Common.Keystore.LocalKeyStore, Catalyst.Common",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.Keystore.IKeyStore, Catalyst.Common"
+                }
+            ]
+        },
+        {
+            "type": "Catalyst.Common.Util.AddressHelper, Catalyst.Common",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.Util.IAddressHelper, Catalyst.Common"
+                }
+            ]
+        },
+        {
+            "type": "Catalyst.Common.Cryptography.RustCryptoContext, Catalyst.Common",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.Cryptography.ICryptoContext, Catalyst.Common"
+                }
+            ]
+        },
+        {
+            "type": "Catalyst.Common.Keystore.KeyStoreServiceWrapped, Catalyst.Common",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.Keystore.IKeyStoreService, Catalyst.Common"
+                }
+            ]
+        },
+        {
             "type": "Catalyst.Common.IO.Messaging.ProtocolMessageFactory, Catalyst.Common",
             "services": [
                 {
