Update all creation of event loop group to use a factory

--- a/src/Catalyst.Cli/Config/shell.components.json
+++ b/src/Catalyst.Cli/Config/shell.components.json
@@ -10,15 +10,24 @@
             ]
         },
         {
-            "type": "Catalyst.Common.IO.HandlerWorkerEventLoopGroupFactory, Catalyst.Common",
+            "type": "Catalyst.Common.IO.EventLoop.EventLoopGroupFactoryConfiguration, Catalyst.Common",
             "services": [
                 {
-                    "type": "Catalyst.Common.Interfaces.IO.IHandlerWorkerEventLoopGroupFactory, Catalyst.Common"
+                    "type": "Catalyst.Common.Interfaces.IO.EventLoop.IEventLoopGroupFactoryConfiguration, Catalyst.Common"
                 }
             ],
-            "parameters": {
-                "tcpClientThreads": 2
+            "properties": {
+                "TcpClientHandlerWorkerThreads": 2
             }
+        },
+        {
+            "type": "Catalyst.Common.IO.EventLoop.TcpClientEventLoopGroupFactory, Catalyst.Common",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.IO.EventLoop.ITcpClientEventLoopGroupFactory, Catalyst.Common"
+                }
+            ],
+            "instanceScope": "singleinstance"
         },
         {
             "type": "Catalyst.Node.Rpc.Client.NodeRpcClientFactory, Catalyst.Node.Rpc.Client",
