--- a/src/Catalyst.Node.Core/Config/components.json
+++ b/src/Catalyst.Node.Core/Config/components.json
@@ -195,18 +195,18 @@
             ]
         },
         {
-            "type": "SharpRepository.InMemoryRepository.InMemoryRepository`1[[Catalyst.Node.Core.RPC.Authentication.AuthCredentials, Catalyst.Node.Core]], SharpRepository.InMemoryRepository",
-            "services": [
-                {
-                    "type": "SharpRepository.Repository.IRepository`1[[Catalyst.Node.Core.RPC.Authentication.AuthCredentials, Catalyst.Node.Core]], SharpRepository.Repository"
-                }
-            ]
-        },
-        {
             "type": "Microsoft.Extensions.Caching.Memory.MemoryCacheOptions, Microsoft.Extensions.Caching.Memory",
             "services": [
                 {
                     "type": "Microsoft.Extensions.Options.IOptions`1[[Microsoft.Extensions.Caching.Memory.MemoryCacheOptions, Microsoft.Extensions.Caching.Memory]], Microsoft.Extensions.Options"
+                }
+            ]
+        },
+        {
+            "type": "Catalyst.Common.FileSystem.FileSystemAwareXmlRepository`1[[Catalyst.Node.Core.RPC.Authentication.AuthCredentials, Catalyst.Node.Core]], Catalyst.Common",
+            "services": [
+                {
+                    "type": "SharpRepository.Repository.IRepository`1[[Catalyst.Node.Core.RPC.Authentication.AuthCredentials, Catalyst.Node.Core]], SharpRepository.Repository"
                 }
             ]
         },
