--- a/src/Catalyst.Cli/Config/shell.components.json
+++ b/src/Catalyst.Cli/Config/shell.components.json
@@ -46,6 +46,54 @@
             ]
         },
         {
+            "type": "Multiformats.Hash.Algorithms.BLAKE2B_256, Multiformats.Hash",
+            "services": [
+                {
+                    "type": "Multiformats.Hash.Algorithms.IMultihashAlgorithm, Multiformats.Hash"
+                }
+            ]
+        },
+        {
+            "type": "Catalyst.Common.Modules.KeySigner.KeySigner, Catalyst.Common",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.Modules.KeySigner.IKeySigner, Catalyst.Common"
+                }
+            ]
+        },
+        {
+            "type": "Catalyst.Common.Keystore.LocalKeyStore, Catalyst.Common",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.Keystore.IKeyStore, Catalyst.Common"
+                }
+            ]
+        },
+        {
+            "type": "Catalyst.Common.Util.AddressHelper, Catalyst.Common",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.Util.IAddressHelper, Catalyst.Common"
+                }
+            ]
+        },
+        {
+            "type": "Catalyst.Common.Cryptography.RustCryptoContext, Catalyst.Common",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.Cryptography.ICryptoContext, Catalyst.Common"
+                }
+            ]
+        },
+        {
+            "type": "Catalyst.Common.Keystore.KeyStoreServiceWrapped, Catalyst.Common",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.Keystore.IKeyStoreService, Catalyst.Common"
+                }
+            ]
+        },
+        {
             "type": "Catalyst.Common.IO.Messaging.ProtocolMessageFactory, Catalyst.Common",
             "services": [
                 {
@@ -137,14 +185,6 @@
         },
         {
             "type": "Catalyst.Node.Rpc.Client.Observables.GetVersionResponseObserver, Catalyst.Node.Rpc.Client",
-            "services": [
-                {
-                    "type": "Catalyst.Common.Interfaces.IO.Observables.IRpcResponseObserver, Catalyst.Common"
-                }
-            ]
-        },
-        {
-            "type": "Catalyst.Node.Rpc.Client.Observables.SignMessageResponseObserver, Catalyst.Node.Rpc.Client",
             "services": [
                 {
                     "type": "Catalyst.Common.Interfaces.IO.Observables.IRpcResponseObserver, Catalyst.Common"
