--- a/src/Catalyst.Cli/Config/shell.components.json
+++ b/src/Catalyst.Cli/Config/shell.components.json
@@ -208,6 +208,14 @@
             ]
         },
         {
+            "type": "Catalyst.Node.Rpc.Client.Observables.TransferFileBytesRequestObserver, Catalyst.Node.Rpc.Client",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.IO.Observables.IRpcRequestObserver, Catalyst.Common"
+                }
+            ]
+        },
+        {
             "type": "Catalyst.Common.FileTransfer.DownloadFileTransferFactory, Catalyst.Common",
             "services": [
                 {
