Message back and forth tests (#540)
* added Outbound && TcpClientChannelFactory test stubs to be fixed when the solution is working again.

* more commented lines as test guidelines

* adapt to merge from develop, not sure about the type we should be trying to parse in, or the VarInt32 prefix that might be missing

* fix merge

--- a/src/Catalyst.Node.Core.IntegrationTests/Catalyst.Node.Core.IntegrationTests.csproj
+++ b/src/Catalyst.Node.Core.IntegrationTests/Catalyst.Node.Core.IntegrationTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>netcoreapp2.2</TargetFramework>
         <AssemblyName>Catalyst.Node.Core.IntegrationTests</AssemblyName>
@@ -12,10 +12,9 @@
     </PropertyGroup>
     <Import Project="../Common.IntegrationTests.props" />
     <ItemGroup>
-        <Folder Include="Rpc" />
-    </ItemGroup>
-    <ItemGroup>
         <ProjectReference Include="..\Catalyst.Common.UnitTests\Catalyst.Common.UnitTests.csproj" />
+        <ProjectReference Include="..\Catalyst.Node.Core.UnitTests\Catalyst.Node.Core.UnitTests.csproj" />
+        <ProjectReference Include="..\Catalyst.Node.Rpc.Client.UnitTests\Catalyst.Node.Rpc.Client.UnitTests.csproj" />
         <ProjectReference Include="..\Catalyst.Node.Rpc.Client\Catalyst.Node.Rpc.Client.csproj" />
         <ProjectReference Include="..\Catalyst.TestUtils\Catalyst.TestUtils.csproj" />
         <ProjectReference Include="..\Catalyst.Cli\Catalyst.Cli.csproj" />
