--- a/src/Catalyst.Cli/Config/shell.components.json
+++ b/src/Catalyst.Cli/Config/shell.components.json
@@ -94,10 +94,10 @@
             ]
         },
         {
-            "type": "Catalyst.Common.IO.Messaging.ProtocolMessageFactory, Catalyst.Common",
+            "type": "Catalyst.Common.IO.Messaging.DtoFactory, Catalyst.Common",
             "services": [
                 {
-                    "type": "Catalyst.Common.Interfaces.IO.Messaging.IProtocolMessageFactory, Catalyst.Common"
+                    "type": "Catalyst.Common.Interfaces.IO.Messaging.IDtoFactory, Catalyst.Common"
                 }
             ]
         },
