Implemented config file pointer creation which points the true location of the data folder

--- a/src/Catalyst.Node.Core/Config/components.json
+++ b/src/Catalyst.Node.Core/Config/components.json
@@ -274,7 +274,10 @@
                 {
                     "type": "Catalyst.Common.Interfaces.FileSystem.IFileSystem, Catalyst.Common"
                 }
-            ]
+            ],
+            "parameters": {
+                "checkConfigPointer": true
+            }
         },
         {
             "type": "Catalyst.Common.FileTransfer.UploadFileTransferFactory, Catalyst.Common",
