--- a/src/Common.Projects.props
+++ b/src/Common.Projects.props
@@ -2,9 +2,9 @@
     <PropertyGroup>
         <Company>AtlasCity.io</Company>
         <Copyright>Copyright © 2019 AtlasCity.io</Copyright>
-        <PackageLicenseUrl>http://github.com/catalyst-network/catalyst-node/LICENSE</PackageLicenseUrl>
-        <PackageProjectUrl>http://github.com/catalyst-network/catalyst-node</PackageProjectUrl>
-        <RepositoryUrl>http://github.com/catalyst-network/catalyst-node</RepositoryUrl>
+        <PackageLicenseUrl>https://github.com/catalyst-network/Catalyst.Node/blob/develop/LICENSE</PackageLicenseUrl>
+        <PackageProjectUrl>https://github.com/catalyst-network/Catalyst.Node</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/catalyst-network/Catalyst.Node</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
         <RuntimeFrameworkVersion>2.2.1</RuntimeFrameworkVersion>
         <LangVersion>7.3</LangVersion>
