include license in future nuget packages

--- a/src/Common.Projects.props
+++ b/src/Common.Projects.props
@@ -25,4 +25,7 @@
         <DebugSymbols>False</DebugSymbols>
         <Optimize>true</Optimize>
     </PropertyGroup>
+    <ItemGroup>
+        <None Include="$(MSBuildThisFileDirectory)../LICENSE" PackagePath="" Pack="true" />
+    </ItemGroup>
 </Project>
