--- a/src/Catalyst.Common/Catalyst.Common.csproj
+++ b/src/Catalyst.Common/Catalyst.Common.csproj
@@ -11,6 +11,7 @@
     <Import Project="../Common.Projects.props" />
     <ItemGroup>
         <PackageReference Include="Catalyst.Cryptography.BulletProofs.Wrapper" Version="0.0.1.6671-beta" />
+        <PackageReference Include="Catalyst.Protocol" Version="0.0.1.6995-beta" />
         <PackageReference Include="DotNetty.Codecs.Protobuf" Version="0.6.0" />
         <PackageReference Include="Ipfs.Api" Version="0.23.6" />
         <PackageReference Include="Ipfs.Core" Version="0.51.1" />
@@ -67,13 +68,6 @@
         <Folder Include="Interfaces\IO\Messaging\Handlers" />
         <Folder Include="Interfaces\P2P\Messaging\Dto" />
         <Folder Include="Interfaces\Util" />
-    </ItemGroup>
-    <ItemGroup>
-        <ProtoBuf Include="..\..\submodules\protocol-protobuffs\src\Common.proto" Link="Protocol\Protobuffs\Common.proto" />
-        <ProtoBuf Include="..\..\submodules\protocol-protobuffs\src\Delta.proto" Link="Protocol\Protobuffs\Delta.proto" />
-        <ProtoBuf Include="..\..\submodules\protocol-protobuffs\src\IPPN.proto" Link="Protocol\Protobuffs\IPPN.proto" />
-        <ProtoBuf Include="..\..\submodules\protocol-protobuffs\src\Rpc.proto" Link="Protocol\Protobuffs\Rpc.proto" />
-        <ProtoBuf Include="..\..\submodules\protocol-protobuffs\src\Transaction.proto" Link="Protocol\Protobuffs\Transaction.proto" />
     </ItemGroup>
     <ItemGroup>
         <Reference Include="System">
